gcc/tree-ssa-math-opts.c
@@ -1447,9 +1447,10 @@ execute_cse_sincos (void)
 		  arg1 = gimple_call_arg (stmt, 1);
 		  loc = gimple_location (stmt);
 
-		  if (real_minus_onep (arg0)
-		      && TREE_CODE (TREE_TYPE (arg1)) == INTEGER_TYPE
-		      && !host_integerp (arg1,0))
+		  if (!host_integerp (arg1, 0))
+		    break;
+
+		  if (real_minus_onep (arg0))
 		    {
                       tree t0, t1, cond, one, minus_one;
 		      gimple stmt;
@@ -1476,9 +1477,6 @@ execute_cse_sincos (void)
 		    }
 		  else
 		    {
-		      if (!host_integerp (arg1, 0))
-			break;
-
 		      n = TREE_INT_CST_LOW (arg1);
 		      result = gimple_expand_builtin_powi (&gsi, loc, arg0, n);
 		    }
